Bug 341696 - Broken layout of object widgets property dialog
Summary: Broken layout of object widgets property dialog
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.14.97 (KDE Applications 14.11.97)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-12-09 14:51 UTC by Ralf Habacker
Modified: 2014-12-11 22:19 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.15.0 (KDE 14.12.0)
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2014-12-09 14:51:47 UTC
umbrello property dialogs normally display properties on a page from top to down. In the general page of the property dialogs for objects widgets the layout seems to broken. It displays the documentation on the top left and the remaining properties in the right bottom.



Reproducible: Always

Steps to Reproduce:
1. open umbrello
2.  add sequence diagram
3. add an object
4. open object properties dialog

Actual Results:  
the layout looks broken

Expected Results:  
The layout should be like other dialogs

The patch from bug 341695 is required to see this dialog
Comment 1 Ralf Habacker 2014-12-09 14:56:17 UTC
Git commit ceeb20244a88120e946f57ab80889303f58c1e8f by Ralf Habacker.
Committed on 09/12/2014 at 14:21.
Pushed by habacker into branch 'Applications/14.12'.

Fix layout of properties dialog page for object widgets.

All other pages uses vertical box layout instead of a broken grid layout.

M  +3    -3    umbrello/dialogs/pages/classgeneralpage.cpp

http://commits.kde.org/umbrello/ceeb20244a88120e946f57ab80889303f58c1e8f
Comment 2 Ralf Habacker 2014-12-09 18:42:24 UTC
Git commit 203a54df5674b9d16f29e02fee5e4ebdcfc66627 by Ralf Habacker.
Committed on 09/12/2014 at 14:21.
Pushed by habacker into branch 'work/73847'.

Fix layout of properties dialog page for object widgets.

All other pages uses vertical box layout instead of a broken grid layout.

M  +6    -3    umbrello/dialogs/pages/classgeneralpage.cpp

http://commits.kde.org/umbrello/203a54df5674b9d16f29e02fee5e4ebdcfc66627
Comment 3 Andi Fischer 2014-12-11 22:19:00 UTC
Git commit 3d83fa922390634c8cf423a0cd28bbfeda41d749 by Andi Fischer, on behalf of Ralf Habacker.
Committed on 09/12/2014 at 14:21.
Pushed by fischer into branch 'frameworks'.

Fix layout of properties dialog page for object widgets.

All other pages uses vertical box layout instead of a broken grid layout.

M  +6    -3    umbrello/dialogs/pages/classgeneralpage.cpp

http://commits.kde.org/umbrello/3d83fa922390634c8cf423a0cd28bbfeda41d749