Fix layout of properties dialog page for object widgets.

All other pages uses vertical box layout instead of a broken grid layout.

BUG:341696